# typst2web

./: CLAUDE.md  README.md  pyproject.toml
docs/: animations-tutorial.md  manim-tutorial.md  settings-file.md
examples/: demo.html  demo.typ  multifile.html  multifile.typ
examples/conf-int/: main.html  main.typ
examples/sections/: calculus.typ  intro.typ
tools/: playground.html
typst_web/: __init__.py  builder.py  cli.py  compiler.py  figure_renderer.py  math_converter.py  math_renderer.py  parser.py  postprocessor.py  preprocessor.py  search.py  server.py  settings.py  svg_proc.py
typst_web/static/: manim-web.browser.js
